objects/SBQQ__Subscription__c.object
<CustomObject>
    <customHelpPage>SBQQ__SubscriptionHelp</customHelpPage>
    <description>Subscription to a product or service currently or previously owned by a customer.</description>
    <fields>
        <fullName>PMC_CPQ_Allocation__c</fullName>
        <label>Allocation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AveragePricePerProduct__c</fullName>
        <label>Average Price Per Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BRLineTotalPriceFormula__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CommissionCurrency__c</fullName>
        <label>Commission Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Commission__c</fullName>
        <description>This field is created to check commission&apos;s value. To support field values being copied over to QLI at the time of Amendment</description>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractType__c</fullName>
        <description>Twin Field to copy over QLI data</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>FPD</fullName>
                </value>
                <value>
                    <fullName>Priced</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <isActive>false</isActive>
                    <label>Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CostAdjustment__c</fullName>
        <label>Cost Adjustment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CropType__c</fullName>
        <label>Crop Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Soy</fullName>
                </value>
                <value>
                    <fullName>Corn Safrinha</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Cane</fullName>
                </value>
                <value>
                    <fullName>Pineapple</fullName>
                </value>
                <value>
                    <fullName>Pumpkin</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Cotton-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Garlic</fullName>
                </value>
                <value>
                    <fullName>Peanut</fullName>
                </value>
                <value>
                    <fullName>Mulberry</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Rice-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Potato</fullName>
                </value>
                <value>
                    <fullName>Potato-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Sweet Potato</fullName>
                </value>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Coffee-Irrigant</fullName>
                </value>
                <value>
                    <fullName>Sugarcane-Plant</fullName>
                </value>
                <value>
                    <fullName>Soca Cane</fullName>
                </value>
                <value>
                    <fullName>Persimmon</fullName>
                </value>
                <value>
                    <fullName>Onion</fullName>
                </value>
                <value>
                    <fullName>Carrot</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerOfferedPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Offered Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerPrice__c</fullName>
        <label>Sales Price Per Ton</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
        <description>To support field values being copied at the time of Amendment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DirtyDistance__c</fullName>
        <label>Dirty Distance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Discount__c</fullName>
        <label>Price Adjustment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
        <description>This field is created to check the estimated freight value. To Support Fields value being copied over to QLIs in Amendment Scenario</description>
        <label>Estimate Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstTax__c</fullName>
        <label>Est. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExchangeRate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExistingInventory__c</fullName>
        <label>Existing Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Point</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Subscriptions (Shipping Point)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExspaceIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalPricePerTon__c</fullName>
        <label>Final Price Per Ton (Original)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalPricePerTonne__c</fullName>
        <label>Final Price Per Tonne</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fixed Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FreightMonth__c</fullName>
        <label>Freight Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_FreightMonth</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HarvestPeriod__c</fullName>
        <label>Harvest Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_HarvestPeriod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InSalesProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Sales Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms1__c</fullName>
        <description>This field is created to check incoterms data.</description>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Industrialization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industrialization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterestFees__c</fullName>
        <label>Interest Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterestPeriod__c</fullName>
        <label>Days to customer Instalment Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Interest__c</fullName>
        <label>Interest Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastPricedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Priced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastProductCustomerPrice__c</fullName>
        <label>Last Product Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LatestSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of XYZ. This will store the value of the latest / newest subscription record created from its current version.</description>
        <label>Latest Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions (Latest Subscription)</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LegacySubscriptionID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Subscription ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LinePONumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LineTotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListCFR__c</fullName>
        <label>List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field captures the Location of the product</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MarginAdjustment__c</fullName>
        <label>Margin Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
        <description>This field is created to check the mode of transportation.</description>
        <label>MoT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MosaicOptiontoShip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mosaic Option to Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NALineTotalPriceFormula__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetUnitPrice__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Netback__c</fullName>
        <label>Netback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Nitrogen__c</fullName>
        <label>Nitrogen %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginalQuantity__c</fullName>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackType__c</fullName>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackageType__c</fullName>
        <description>The Packaging Type of the Product added to the quote.</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackagingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentDate__c</fullName>
        <description>This field is created to check Payment date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PercentageOfQuantity__c</fullName>
        <label>% of Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Phosphorous__c</fullName>
        <label>Phosphorous %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Potassium__c</fullName>
        <label>Potassium %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PreviousListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceBookValue__c</fullName>
        <label>Price Book Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PriceBookValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceByDate__c</fullName>
        <description>This field is created to check price by date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Price By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceCeiling__c</fullName>
        <label>Ceiling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceFloor__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceGuidanceTarget__c</fullName>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>PMC_CPQ_ProductLocation__c.PMC_CPQ_ProductName__c</valueField>
            </filterItems>
            <filterItems>
                <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Origin Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLineSelfId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Line Self Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLineSelfLookupBackend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of GDASF-9382, to store lookup value of quoteline</description>
        <label>Quote Line (Backend)</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscriptions (Quote Line (Backend))</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_QuoteBusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordType__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic NA</fullName>
                </value>
                <value>
                    <fullName>Domestic SA</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReplacementMargin__c</fullName>
        <label>Replacement Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RoadDistance__c</fullName>
        <label>Road Distance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to check the shipping address value</description>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions (Ship To)</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingType__c</fullName>
        <label>Shipping Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_ShippingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldCFR__c</fullName>
        <label>Sold CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToShipToJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>PMC_SS_AccountPartnerRelationships__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SubscriptionNumberIdentifier__c</fullName>
        <description>This field will store the Subscription number(AutoNumber) which will be used as an External Id for 066I.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Subscription Number Identifier</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ToleranceComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tolerance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Tolerance__c</fullName>
        <label>Tolerance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+/- 10% Buyers Option</fullName>
                </value>
                <value>
                    <fullName>+/- 10% Shippers Option</fullName>
                </value>
                <value>
                    <fullName>+/- 5% Buyers Option</fullName>
                </value>
                <value>
                    <fullName>+/- 5% Shippers Option</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalAvailableQuantity__c</fullName>
        <description>This field will store the value corresponding to the quantities available to order for a line item</description>
        <label>Total Available Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalOrderedQuantity__c</fullName>
        <description>This field will store the  summation of quantities of the several order lines created for a particular line item.</description>
        <label>Total Ordered Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitofMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VCOAdjustment__c</fullName>
        <label>VCO Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VCODeliveryRegion__c</fullName>
        <label>Delivery Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_DeliveryRegion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VCOIntercompanyPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VCO Intercompany Plant</label>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Subscriptions (VCO Intercompany Plant)</relationshipLabel>
        <relationshipName>Intercompany_VCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VCOQuotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCO Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ValidEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Window End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ValidStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Window Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VariationofCFR__c</fullName>
        <label>Variation of CFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_VolumeDiscount__c</fullName>
        <label>Volume Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_frontendIncoterms2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Group_Number__c</fullName>
        <formula>TEXT(SBQQ__QuoteLine__r.SBQQ__Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountUOMConvertedQuantity__c</fullName>
        <description>DO NOT USE</description>
        <label>Account UOM Converted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
        <description>Field to specify the quantity in account&apos;s UOM</description>
        <formula>IF(  AND( 
         OR( SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
             SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
             TEXT(PMC_CPQ_UnitofMeasure__c)  ==  SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name), 
             SBQQ__Quantity__c  , 
             IF( AND(TEXT(PMC_CPQ_UnitofMeasure__c) = &apos;MTN&apos;, SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
                 SBQQ__Quantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
                 IF( AND(TEXT(PMC_CPQ_UnitofMeasure__c) = &apos;STN&apos;, SBQQ__Contract__r.Account.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
                     SBQQ__Quantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
                     0) ) )</formula>
        <label>Quantity (Account’s UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to unit of measure object.</description>
        <label>Unit of Measure</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns this subscription. This relationship is used for volume discount calculations.</description>
        <inlineHelpText>Account that owns this subscription. This relationship is used for volume discount calculations.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>